--- a/css/css1.css
+++ b/css/css1.css
@@ -1,6 +1,8 @@
 body{
 background-image:url("../images/bg.jpg");
 background-color:#476b6b;
+  height:auto!important;
+    min-height:100vh;
 background-repeat:no-repeat;
 background-size: cover;
 color: #ccffff;
